  * debian/postrm:
    - fix bug on purge (LP: #420042)
  * softwarestore/app.py, data/ui/SoftwareStore.ui:
    - add launchpad integration help (if available)
  * softwarestore/view/viewswitcher.py:
    - reconnect to the daemon if it dies (e.g. because of
      inactivity) LP: #420124
  * softwarestore/view/appdetailsview.py:
    - show number of installed dependencies in the description

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Aug 2009 17:40:09 +0200

software-store (0.1.2) karmic; urgency=low

  * softwarestore/view/appdetailsview.py:
    - fix crash when no canidate is available (LP: #419258)
  * softwarestore/view/catview.py:
    - fix markup escape issue (LP: #419263)
    - render the category text one pango shrink step smaller
  * softwarestore/view/appdetailsview.py:
    - ignore dbus errors resulting from canceling the authentication
      dialog (LP: #412269)
  * softwarestore/view/catview.py:
    - fix crash in non english languages when parsing the 
      applications.menu (LP: #419356)
  * improve the search entry (LP: #419740, LP: #419744) and do not
    loose focus when typing in it
  * fix background cache opening
  * softwarestore/view/catview.py
    - be more keybaod friedly
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Aug 2009 13:55:52 +0200

software-store (0.1.1) karmic; urgency=low

  * fix icon loading/installing
  * add dependencies:
    - gnome-menus (LP: #419152)
    - python-xapian (LP: #418580)
    - policykit-1-gnome | policykit-1-qt (LP: #419154)
  * add about dialog
  * use gtk-missing-image if no image is available (LP: #418805)
  * fix unneeded scrollbar (LP: #418817)
  * highlight present location in navigation bar (LP: #418791)
  * change category sort order to conform with the spec (LP: #418580)
  * show the summary in the software list

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 26 Aug 2009 15:24:02 +0200

software-store (0.1) karmic; urgency=low

  * Initial release
