@@ -1,7 +1,8 @@
 # Copyright (C) 2009 Canonical
 #
 # Authors:
-#  rugby471
+#  Michael Vogt
+#  Andrew Higginson (rugby471)
 #
 # This program is free software; you can redistribute it and/or modify it under
 # the terms of the GNU General Public License as published by the Free Software
